@@ -58,6 +58,7 @@ A [Minetest][] mod that provides a set of free sounds & methods. It is intended 
 | [pencil_erase][]                  | damsur                   | CC0          |                         |
 | [pencil_write][]                  | NachtmahrTV              | CC0          |                         |
 | [piano][]                         | [authors](#authors)      | CC0          |                         |
+| [pig][]                           | yottasounds              | CC BY 3.0    |                         |
 | [pigeon][]                        | JavierSerrat             | CC0          |                         |
 | [quail][]                         | PrincessGrace            | CC0          |                         |
 | [rooster][]                       | poorenglishjuggler       | CC0          |                         |
@@ -280,6 +281,7 @@ end
 [pencil_erase]: https://freesound.org/s/443241/
 [pencil_write]: https://freesound.org/s/571800/
 [piano]: https://commons.wikimedia.org/wiki/File:Maple_leaf_rag.ogg
+[pig]: https://freesound.org/s/174615/
 [pigeon]: https://freesound.org/s/524345/
 [place_metal]: https://opengameart.org/node/3511
 [quail]: https://freesound.org/s/329371/
